# industrial_training

./: .buildinfo  .check_training_config.bash  .gitattributes  .gitignore  .industrial_training_ci.bash  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  README.md  conf.py  genindex.html  index.html  objects.inv  search.html  searchindex.js  training.workspace
.doctrees/: environment.pickle  (+1 more)
7.1/src/fake_ar_publisher/: CMakeLists.txt  package.xml
7.1/src/fake_ar_publisher/src/: fake_ar_publisher.cpp
7.1/src/fake_ar_publisher_msgs/: CMakeLists.txt  package.xml
exercises/4.1/src/ur5_demo_descartes/: package.xml
exercises/4.1/src/ur5_demo_descartes/include/ur5_demo_descartes/: ur_moveit_plugin.h
exercises/4.1/src/ur5_demo_descartes/src/: ur_kin.cpp  ur_moveit_plugin.cpp
exercises/5.0/src/myworkcell_core/: CMakeLists.txt  package.xml
exercises/5.0/src/myworkcell_core/src/: adv_descartes_node.cpp  adv_myworkcell_node.cpp  descartes_node.cpp  myworkcell_node.cpp  vision_node.cpp
exercises/5.0/src/ur5_demo_descartes/: CMakeLists.txt
exercises/5.0/src/ur5_demo_descartes/include/ur5_demo_descartes/: ur_moveit_plugin.h
exercises/5.0/src/ur5_demo_descartes/src/: plugin_init.cpp
exercises/5.1/src/myworkcell_core/: CMakeLists.txt  package.xml
exercises/5.1/src/myworkcell_core/src/: descartes_node.cpp
exercises/5.1/src/myworkcell_core/test/: utest.cpp  utest_launch.test
exercises/5.4/src/myworkcell_support/: CMakeLists.txt
exercises/5.4/src/myworkcell_support/rviz/: myworkcell.rviz
exercises/5.4/src/myworkcell_support/urdf/: myworkcell.xacro
exercises/6.0/src/ur5_demo_descartes/: package.xml
exercises/6.0/src/ur5_demo_descartes/src/: ur_kin.cpp
exercises/6.1/src/myworkcell_core/: CMakeLists.txt  package.xml
exercises/6.1/src/myworkcell_core/src/: myworkcell_node.cpp  vision_node.cpp
exercises/6.1/src/myworkcell_core/src/test/: utest.cpp
exercises/6.1/src/myworkcell_core/test/: utest_launch.test
exercises/6.4/src/myworkcell_support/: package.xml
exercises/7.1/src/myworkcell_core/: CMakeLists.txt  package.xml
exercises/7.1/src/myworkcell_core/src/: myworkcell_node.cpp  vision_node.cpp
exercises/7.1/src/myworkcell_core/srv/: LocalizePart.srv
exercises/8.0/solution/snp_motion_execution/: package.xml
exercises/8.0/solution/snp_motion_execution/src/: motion_execution_node.cpp
exercises/8.0/solution/snp_motion_planning/: package.xml
exercises/8.0/solution/snp_motion_planning/config/: task_composer_plugins.yaml
exercises/8.0/solution/snp_motion_planning/launch/: planning_server.launch.xml
exercises/8.0/solution/snp_motion_planning/src/: planner_profiles.hpp  planning_server.cpp  taskflow_generators.hpp
exercises/8.0/solution/snp_tpp/: CMakeLists.txt  package.xml
exercises/8.0/solution/snp_tpp/src/: roi_selection_mesh_modifier.cpp  roi_selection_mesh_modifier_widget.ui  snp_tpp_node.cpp  snp_tpp_test_node.cpp  tpp_widget.cpp  tpp_widget.h
exercises/8.0/template/snp_application/: CMakeLists.txt  package.xml  plugin_description.xml
exercises/8.0/template/snp_application/include/: serialize.h  snp_widget.h  std_msgs_yaml.h  trajectory_msgs_yaml.h
exercises/8.0/template/snp_application/src/: main.cpp  snp_widget.cpp
exercises/8.0/template/snp_automate_2022/: CMakeLists.txt  dependencies.repos  package.xml
exercises/8.0/template/snp_automate_2022/config/: app.rviz  camera_calibration.yaml  controllers.yaml  rviz_base_config.rviz  scan_traj.yaml  tpp.yaml  workcell.srdf  workcell_plugins.yaml
exercises/8.0/template/snp_automate_2022/launch/: start.launch.xml  test.launch.xml
exercises/8.0/template/snp_automate_2022/urdf/: ros2_control.xacro  workcell.xacro
exercises/8.0/template/snp_motion_execution/: CMakeLists.txt
exercises/8.0/template/snp_motion_execution/launch/: ros2_control.launch.py
exercises/8.0/template/snp_motion_execution/src/: execution_simulator_node.cpp  motion_execution_node.cpp  robot_enable_simulator_node.cpp
exercises/8.0/template/snp_motion_planning/: CMakeLists.txt
exercises/8.0/template/snp_motion_planning/config/: task_composer_plugins.yaml
exercises/8.0/template/snp_motion_planning/launch/: planning_server.launch.xml
exercises/8.0/template/snp_motion_planning/src/: motoman_hc10_ikfast_plugin.cpp  motoman_hc10_ikfast_solver.hpp  planner_profiles.hpp  planning_server.cpp  taskflow_generators.hpp
exercises/8.0/template/snp_msgs/: CMakeLists.txt  package.xml
exercises/8.0/template/snp_msgs/msg/: ToolPaths.msg
exercises/8.0/template/snp_msgs/srv/: ExecuteMotionPlan.srv  GenerateToolPaths.srv
exercises/8.0/template/snp_scanning/: CMakeLists.txt  package.xml
exercises/8.0/template/snp_scanning/src/: open3d_sim_node.cpp
exercises/8.0/template/snp_tpp/: CMakeLists.txt  README.md
exercises/8.0/template/snp_tpp/src/: plugins.cpp  roi_selection_mesh_modifier.cpp  roi_selection_mesh_modifier.h  roi_selection_mesh_modifier_widget.cpp  snp_tpp_node.cpp  tpp_app.cpp  tpp_widget.cpp
exercises/8.0/template/snp_tpp/ui/: tpp_widget.ui
training/supplements/dx100/: CMakeLists.txt  manifest.xml
training/supplements/dx100/include/dx100/: definitions.h  joint_relay_handler.h  joint_trajectory_handler.h  p_var_q.h
training/supplements/dx100/inform/: BUFFER_INIT.JBI  BUFFER_WAIT.JBI  PVARQ20VV.JBI
training/supplements/dx100/launch/: visualize_real_robot.launch
training/supplements/dx100/motoplus/: README.txt
training/supplements/dx100/motoplus/motoros_lib/: ParameterExtraction.h  ParameterExtraction.mpLib  SyncFromSource.bat  SyncToSource.bat  controller.h  input_handler.cpp  joint_motion_handler.cpp  joint_motion_handler.h  motoplus_sync_script_generator.xlsm  mp_default_main.cpp  mp_default_main.h
training/supplements/dx100/motoplus/motoros_server/: SyncFromSource.bat  motoros_server.mpProj
training/supplements/dx100/src/: joint_relay_handler.cpp  joint_trajectory_handler.cpp  motion_download_interface.cpp  ros_conversion.cpp  trajectory_job.cpp
training/supplements/dx100/test/: small_motion_trajectory.bag
training/supplements/dx100/utilities/: genTraj.py
(+4430 files in other folders)
