<?xml version="1.0"?>
<package format="2">
  <name>ur5_demo_descartes</name>
  <version>0.0.0</version>
  <description>The ur5_demo_descartes package</description>

  <maintainer email="jnicho@swri.org">Jorge Nicho</maintainer>
  <license>Apache2.0</license>
  <url type="website">https://github.com/ros-industrial/industrial_training</url>
  <author email="jnicho@swri.org">Jorge Nicho</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>descartes_core</depend>
  <depend>descartes_moveit</depend>
  <depend>pluginlib</depend>
  <depend>moveit_core</depend>
  <depend>liblapack-dev</depend>
  <depend>roscpp</depend>
  <depend>tf_conversions</depend>
  <depend>ur_kinematics</depend>

  <export>
    <descartes_core plugin="${prefix}/ur5_demo_descartes_plugins.xml"/>
  </export>
</package>
