<?xml version="1.0"?>
<package>
  <name>myworkcell_core</name>
  <version>0.0.0</version>
  <description>The myworkcell_core package</description>
  <maintainer email="ros-industrial@todo.todo">ros-industrial</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>fake_ar_publisher</build_depend>
  <run_depend>fake_ar_publisher</run_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <build_depend>ur5_demo_descartes</build_depend>
  <run_depend>ur5_demo_descartes</run_depend>
  <build_depend>descartes_trajectory</build_depend>
  <run_depend>descartes_trajectory</run_depend>
  <build_depend>descartes_planner</build_depend>
  <run_depend>descartes_planner</run_depend>
  <build_depend>descartes_utilities</build_depend>
  <run_depend>descartes_utilities</run_depend>
  <build_depend>trajectory_msgs</build_depend>
  <run_depend>trajectory_msgs</run_depend>
  <build_depend>tf_conversions</build_depend>
  <run_depend>tf_conversions</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
