<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>snp_tpp</name>
  <version>0.0.0</version>
  <description>
    Scan N Plan Tool Path Planning Package
    This package contains a ROS2 wrapper around the ROS-Industrial Noether library.  This exposes
    to the ROS2 system the ability to generate evenly-spaced lines of evenly-spaced points along a
    supplied surface.
  </description>
  <maintainer email="david.merz@swri.org">David Merz, Jr.</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ros_industrial_cmake_boilerplate</build_depend>
  <depend>geometry_msgs</depend>
  <depend>noether_tpp</depend>
  <depend>noether_gui</depend>
  <depend>noether_filtering</depend>
  <depend>rclcpp</depend>
  <depend>snp_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>boost_plugin_loader</depend>
  <depend>rviz_polygon_selection_tool</depend>

  <test_depend>ament_lint_auto</test_depend>
  <!-- TODO: replace with more targeted set of linters
  <test_depend>ament_lint_common</test_depend>
  -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
