<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>snp_application</name>
  <version>0.0.0</version>
  <description>
    GUI application to run Scan-N-Plan for ROSCon 2021 workshop.
  </description>
  <maintainer email="reid.christopher@swri.org">Reid Christopher</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <depend>snp_msgs</depend>
  <depend>industrial_reconstruction_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>yaml-cpp</depend>
  <depend>rviz_common</depend>
  <depend>pluginlib</depend>

  <test_depend>ament_lint_auto</test_depend>
  <!-- TODO: replace with more targeted set of linters
  <test_depend>ament_lint_common</test_depend>
  -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
